--- a/templates/index.html
+++ b/templates/index.html
@@ -93,12 +93,12 @@
 						<li class="downs">
 							<a href="javaScript:;">我的博库</a><i class="iconfont">&#xe6b5;</i>
 							<dl class="down-fol">
-								<dd><a href="javaScript:;">我的博库</a></dd>
-								<dd><a href="javaScript:;">我的订单</a></dd>
-								<dd><a href="javaScript:;">我的优惠券</a></dd>
-								<dd><a href="javaScript:;">我的收藏</a></dd>
-								<dd><a href="javaScript:;">我的收入</a></dd>
-								<dd><a href="javaScript:;">官方消息</a></dd>
+								<dd><a href="{% url 'boku:mine' %}">我的博库</a></dd>
+{#								<dd><a href="javaScript:;">我的订单</a></dd>#}
+{#								<dd><a href="javaScript:;">我的优惠券</a></dd>#}
+{#								<dd><a href="javaScript:;">我的收藏</a></dd>#}
+{#								<dd><a href="javaScript:;">我的收入</a></dd>#}
+{#								<dd><a href="javaScript:;">官方消息</a></dd>#}
 							</dl>
 						</li>
 						<li><a href="javaScript:;">收藏夹</a></li>
