--- a/templates/cart.html
+++ b/templates/cart.html
@@ -288,7 +288,7 @@
             width: 100px;
             height: 100px;
             float: left;
-            background: url(../images/tushu/1/1.jpg) no-repeat;
+            background: url({% static "/images/tushu/1/1.jpg" %}) no-repeat;
             background-size: contain;
         }
 
@@ -470,9 +470,7 @@
                     console.log(response)
                     if (response.status) {
                         $(".cont .list_1").each(function () {
-                            console.log(this)
-
-                            if (isall && "input[name='checkboxall']"){
+                            if (isall){
                                 $("#checkboxall").prop('checked',true)
                             }else {
                                 $("#checkboxall").prop('checked',false)
@@ -492,6 +490,21 @@
             {#                    $("input[name='checkboxall']").prop("checked", false);#}
             {#                }#}
             {#            }#}
+
+            })
+
+        {#    下單#}
+            $("#generateorder").click(function () {
+                $.get("/boku/genetateorder",function (response) {
+                    console.log(response)
+                    alert(response.msg)
+                    if (response.status==1){
+                        window.open('/boku/orderdetail/' + response.identifier + '/',target='_self')
+                    }
+
+
+
+                })
 
 
             })
@@ -616,8 +629,10 @@
                     <p>商品合计 ¥:<span class="zPrc1">{{ totalprice1 }}</span>(含运费)</p>
 
                 </li>
-                <li class="li6 flt-le">
-                    去结算
+                <li class="li6 flt-le" id="generateorder">
+                    <button class="li6 flt-le">
+                        下單
+                    </button>
                 </li>
             </ul>
         </div>
