--- a/templates/orderdetail.html
+++ b/templates/orderdetail.html
@@ -532,7 +532,7 @@
                                     </div>
                                 </li>
                                 <li class="zPrc">
-                                    <p class="prc2 mt-35">¥{{ orderbook.book.newprice }}</p>
+                                    <p class="prc2 mt-35">¥{{ orderbook.price}}</p>
                                 </li>
                                 <li class="handle">
                                     <p class="mt-35">移入收藏夹</p>
