--- a/templates/details.html
+++ b/templates/details.html
@@ -645,9 +645,10 @@
                         window.open('/boku/login', '_self')
                     }else if (response.status == 1){
 
+                        $('#booknumber').val(1)
 
                         alert('添加購物車成功')
-                        $('#booknumber').val(1)
+                        sum =1
                     }
 
 
